Added java arguments to run_repast_uc1.sh.